--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-        <p id="header1">TSP Distance Calculator</p>
+        <p id="header1"></p>
         <p id="header2"></p>
     </body>
 </html>
